Version 3.5.1 (2012-05-xx)
	Fixed bug where selection normalization logic would break the selections of parent elements using the element path.
Version 3.5 (2012-05-03)
	Fixed menu rendering issue if the document was in rtl mode.
	Fixed bug where the hide function would throw an error about a missing variable.
	Fixed bug where autolink wouldn't convert URLs when hitting enter on IE due to the new enter key logic.
	Fixed bug where formatting using shortcuts like ctrl+b wouldn't work properly the first time.
	Fixed bug where selection.setContent after a formatter call wouldn't generate formatted contents.
	Fixed bug where whitespace would be removed before/after invalid_elements when they where removed.
	Fixed bug where updating styles using the theme image dialog in non inline mode on IE9 would produce errors.
	Fixed bug where IE 8 would produce an error when using the contextmenu plugin.
	Fixed bug where delete/backspace could remove contents of noneditable elements.
	Fixed so background color in style preview gets computed from body element if the current style element is transparent.
Version 3.5b3 (2012-03-29)
	Added cancel button to colour picker dialog.
	Added figure and figcaption to the html5 visualblocks plugin.
	Added default alignment options for the figure element.
	Fixed bug where empty inline elements within block elements would sometimes produce a br child element.
	Fixed bug where urls pointing to the same domain as the current one would cause undefined errors. Patch contributed by Paul Giberson.
	Fixed bug where enter inside an editable element inside an non editable element would split the element.
	Fixed bug where cut/copy/paste of noneditable elements didn't work.
	Fixed bug where backspace would sometimes produce font elements on WebKit.
	Fixed bug where WebKit would produce spans out of various inline elements when using backspace.
	Fixed bug where IE9 wouldn't properly update image styles when images where resized.