@@ -1,5 +1,6 @@
 Version 3.5.1 (2012-05-xx)
 	Fixed bug where selection normalization logic would break the selections of parent elements using the element path.
+	Fixed bug where the autolink plugin would include trailing dots in domain names in the link creation.
 Version 3.5 (2012-05-03)
 	Fixed menu rendering issue if the document was in rtl mode.
 	Fixed bug where the hide function would throw an error about a missing variable.
